syntax = "proto3";

package app;

service AppService {
  rpc GetHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
